--- a/src/Components/Auth.css
+++ b/src/Components/Auth.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+html{
+  font-family: 'Indie Flower', cursive;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
 /* FANCY EFFECTS */
 
 .text-effects{
@@ -24,7 +30,16 @@
   box-shadow: black 0 0 30px;
   background-image: url('https://previews.123rf.com/images/decorwithme/decorwithme1707/decorwithme170700036/81306492-pizza-cartoon-character-modern-vector-template-set-of-mascot-illustrations-gift-images-of-a-pizza-sl.jpg');
   background-size: contain;
-  margin-top: 10vh;
+  margin-top: 40vh;
+  margin-bottom: 40vh;
+}
+
+.fancy-text{
+  font-size: 5rem;
+  font-weight: 700;
+  color: transparent;
+  text-shadow: 2px 2px 10px  rgb(128, 0, 128);
+  text-decoration: overline;
 }
 
 /* FLEXBOX */
@@ -55,14 +70,6 @@
 
 .wrap-box:nth-child(even){
   background: blue;
-}
-
-/* BOX MODEL */
-/* SEE LOGIN HOLD DIV */
-
-html{
-  overflow-x: hidden;
-  box-sizing: border-box;
 }
 
 /* FLOAT/DISPLAY */
