--- a/src/Components/Semantic.css
+++ b/src/Components/Semantic.css
@@ -31,8 +31,8 @@
 }
 
 .images>img{
-  animation: spin 1s linear infinite;
-}
+  animation: spin 1s ease-in-out infinite;
+  }
 
 @keyframes spin{
   from{
