--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+h1{
+	font-size: 2.5rem;
+}
 body {
 	line-height: 1;
 }
